<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="8dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/weatherCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="12sp"
                    app:cardElevation="8sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:orientation="vertical"
                        >

                        <androidx.viewpager2.widget.ViewPager2
                            android:id="@+id/viewPager"
                            android:background="#973838"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                             />


</LinearLayout>


                </androidx.cardview.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="6dp"
                    android:background="#3B55E4">

                    <TextView
                        android:id="@+id/movingTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="Indian Railways Promotee Officers Federation (IRPOF) Is"
                        android:textSize="15sp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>



                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- 5 Buttons -->
                    <Button
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hbtn_txt1" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hbtn_txt2" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hbtn_txt3" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hbtn_txt4" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hbtn_txt5" />



                    <!-- XML Layout for the full text container -->
                    <LinearLayout
                        android:id="@+id/fullTextContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Horizontal LinearLayout to hold the back button icon and heading text -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">

                            <!-- ImageView for the back button icon -->
                            <ImageView
                                android:id="@+id/backButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_arrow_back_24"
                            android:padding="8dp" />

                            <!-- Heading text to display the button text as a heading -->
                            <TextView
                                android:id="@+id/headingText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:layout_marginStart="8dp" /> <!-- Add some margin between the back button and the heading -->

                        </LinearLayout>

                        <!-- ScrollView to make the full text scrollable -->
                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <!-- TextView to display the full text -->
                            <TextView
                                android:id="@+id/fullText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp" />

                        </ScrollView>

                    </LinearLayout>


                </LinearLayout>







            </LinearLayout>

    </FrameLayout>